netcdf.h

/* These defs added by netCDF configure because parallel HDF5 is not present. */
typedef int nc_type;
#define	NC_BYTE         1	/* signed 1 byte integer */
#define	NC_CHAR 	2	/* ISO/ASCII character */
#define	NC_SHORT 	3	/* signed 2 byte integer */
#define	NC_INT 	        4	/* signed 4 byte integer */
#define	NC_FLOAT 	5	/* single precision floating point number */
#define	NC_DOUBLE 	6	/* double precision floating point number */
/*
 * 	Default fill values, used unless _FillValue attribute is set.
 * These values are stuffed into newly allocated space as appropriate.
 * The hope is that one might use these to notice that a particular datum
 * has not been set.
 */
#define NC_FILL_BYTE	((signed char)-127)
#define NC_FILL_CHAR	((char)0)
#define NC_FILL_SHORT	((short)-32767)
#define NC_FILL_INT	(-2147483647L)
#define NC_FILL_FLOAT	(9.9692099683868690e+36f) /* near 15 * 2^119 */
#define NC_FILL_DOUBLE	(9.9692099683868690e+36)
/*
 * The above values are defaults.  If you wish a variable to use a
 * different value than the above defaults, create an attribute with
 * the same type as the variable and the following reserved name. The
 * value you give the attribute will be used as the fill value for
 * that variable.
 */
#define _FillValue	"_FillValue"
#define NC_FILL		0	/* argument to ncsetfill to clear NC_NOFILL */
#define NC_NOFILL	0x100	/* Don't fill data section an records */
/*
 * Use these 'mode' flags for nc_open.
 */
#define NC_NOWRITE	0	/* default is read only */
#define NC_WRITE    	0x0001	/* read & write */
/*
 * Use these 'mode' flags for nc_create.
 */
#define NC_CLOBBER	0
#define NC_NOCLOBBER	0x0004	/* Don't destroy existing file on create */
/*
 * Use these 'mode' flags for both nc_create and nc_open.
 */
#define NC_SHARE       0x0800	/* Share updates, limit cacheing */
/* The following flag currently is ignored, but use in
 * nc_open() or nc_create() may someday support use of advisory
 * locking to prevent multiple writers from clobbering a file 
 */
#define NC_LOCK		0x0400	/* Use locking if available */
/*
 * 'size' argument to ncdimdef for an unlimited dimension
 */
#define NC_UNLIMITED 0L
/*
 * attribute id to put/get a global attribute
 */
#define NC_GLOBAL -1
/*
 * These maximums are enforced by the interface, to facilitate writing
 * applications and utilities.  However, nothing is statically allocated to
 * these sizes internally.
 */
#define NC_MAX_DIMS	1024	 /* max dimensions per file */
#define NC_MAX_ATTRS	8192	 /* max global or per variable attributes */
#define NC_MAX_VARS	8192	 /* max variables per file */
#define NC_MAX_NAME	256	 /* max length of a name */
/* As a rule, NC_MAX_VAR_DIMS <= NC_MAX_DIMS*/
#define NC_MAX_VAR_DIMS	1024 /* max per variable dimensions */
EXTERNL const char *
nc_inq_libvers(void);
EXTERNL const char *
nc_strerror(int ncerr);
EXTERNL int
nc_create(const char *path, int cmode, int *ncidp);
EXTERNL int
nc_open(const char *path, int mode, int *ncidp);
/* Set the fill mode (classic or 64-bit offset files only). */
EXTERNL int
nc_set_fill(int ncid, int fillmode, int *old_modep);
EXTERNL int
nc_redef(int ncid);
EXTERNL int
nc_enddef(int ncid);
EXTERNL int
nc_sync(int ncid);
EXTERNL int
nc_abort(int ncid);
EXTERNL int
nc_close(int ncid);
EXTERNL int
nc_inq(int ncid, int *ndimsp, int *nvarsp, int *nattsp, int *unlimdimidp);
EXTERNL int 
nc_inq_ndims(int ncid, int *ndimsp);
EXTERNL int 
nc_inq_nvars(int ncid, int *nvarsp);
EXTERNL int 
nc_inq_natts(int ncid, int *nattsp);
EXTERNL int 
nc_inq_unlimdim(int ncid, int *unlimdimidp);
/* Begin _dim */

EXTERNL int
nc_def_dim(int ncid, const char *name, size_t len, int *idp);
EXTERNL int
nc_inq_dimid(int ncid, const char *name, int *idp);
EXTERNL int
nc_inq_dim(int ncid, int dimid, char *name, size_t *lenp);
EXTERNL int 
nc_inq_dimname(int ncid, int dimid, char *name);
EXTERNL int 
nc_inq_dimlen(int ncid, int dimid, size_t *lenp);
EXTERNL int
nc_rename_dim(int ncid, int dimid, const char *name);
/* End _dim */
/* Begin _att */

EXTERNL int
nc_inq_att(int ncid, int varid, const char *name,
	   nc_type *xtypep, size_t *lenp);
EXTERNL int 
nc_inq_attid(int ncid, int varid, const char *name, int *idp);
EXTERNL int 
nc_inq_atttype(int ncid, int varid, const char *name, nc_type *xtypep);
EXTERNL int 
nc_inq_attlen(int ncid, int varid, const char *name, size_t *lenp);
EXTERNL int
nc_inq_attname(int ncid, int varid, int attnum, char *name);
EXTERNL int
ncsetfill(int ncid, int fillmode);
EXTERNL int
ncdimdef(int ncid, const char *name, long len);